public/assets/quest-book/css/main.css
html {

}



body {
    /*background-image: url("../img/space_bg.jpg");*/
    min-height: 100vh;
    min-width: 1200px;
    background:
            radial-gradient(circle, transparent 40%, black 75%),
            url("../img/space_bg.jpg");
}

@font-face {
    font-family: "Fantasy1";
    src: url("../../fonts/Fantasy1.ttf");
}

div.container {
    height: 100%;
    margin: 40px;
}

div#quest-book {
    background: url("../img/book.png") no-repeat center top;
    /*-webkit-background-size: cover;*/
    /*-moz-background-size: cover;*/
    /*-o-background-size: cover;*/
    /*background-size: contain;*/
    background-size: 100% auto;
    background-origin: content-box;
    height: 100%;
    padding: 50px;
}

#quest-book>div.ui.grid {
    margin-top: 20px;
    max-height: 100%;
    min-height: 400px;
    height: 80%;
}

h1 {
    font-family: "Fantasy1", Lato, "Helvetica Neue", sans-serif !important;
    font-size: 5em;
    text-align: center;
}

h2 {
    font-family: "Fantasy1", Lato, "Helvetica Neue", sans-serif !important;

}

/* debug */
div.wide {
    margin-top: 80px;
    /*border: 1px solid black;*/
}

div.wide.six {
    margin-top: 40px;
    max-height: 100%;
    /*background-color: rgba(250,0,0,0.5);*/
    overflow-y: scroll;
    /*max-height: 1000px;*/
}

div.left-margin {
    height: 100%;
}

.success {
    color: #146A1A;
}

.fail {
    color: #A41E1C;
}

@media all and (max-width: 1300px){
    .container { margin: 0 !important;}
}

@media all and (max-width: 960px) and (min-width: 100px){
    body {
        min-width: 0 !important;
        background: none;
    }
    div#quest-book {
        background: url("../img/mobile-book.png") no-repeat center center fixed;
        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
        background-size: cover;
        padding: 0;
        /*background: url("../img/book.png") no-repeat center top;*/
        /*-webkit-background-size: cover;*/
        /*-moz-background-size: cover;*/
        /*-o-background-size: cover;*/
        /*background-size: contain;*/
        /*background-size: 100% auto;*/
        /*background-origin: content-box;*/
        /*height: 100%;*/
        /*padding: 50px;*/
    }

    i {

    }

    .left-margin, .right-margin {
        /*display: none !important;*/
    }
}

